<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="154dp"
            android:layout_height="wrap_content">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/paymentRadioGroup">
            <RadioButton
                android:text="Current Balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/currentbalance"
                android:textColor="@color/colorGrey"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="Due on"
                    android:textColor="@color/colorGrey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11"
                    android:layout_weight="1"
                    android:paddingLeft="30dp" />

                <TextView
                    android:text="1/1/2017"
                    android:textColor="@color/colorGrey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/currentdate"
                    android:layout_weight="1" />

            </LinearLayout>

            <RadioButton
                android:text="Other Amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/otheramount"
                android:textColor="@color/colorGrey"
                android:layout_weight="1" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:text="KSh "
                android:layout_width="match_parent"
                android:textColor="@color/colorGrey"
                android:layout_height="wrap_content"
                android:layout_weight="0.46"
                android:paddingTop="9dp" />

            <TextView
                android:text="KSh "
                android:layout_width="wrap_content"
                android:textColor="@color/colorGrey"
                android:layout_height="wrap_content"
                android:id="@+id/textView17"
                android:gravity="right"
                android:paddingTop="10dp"
                android:layout_weight="0.19" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="33.33"
                android:layout_width="wrap_content"
                android:textColor="@color/colorGrey"
                android:layout_height="wrap_content"
                android:id="@+id/currentbalancenumber"
                android:layout_weight="0.74"
                android:paddingTop="9dp"
                android:paddingLeft="4dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/amount"
                android:background="@android:drawable/editbox_background_normal" />

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:text="Enter your M-PESA PIN:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorGrey" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="10"
        android:id="@+id/pin"
        android:background="@android:drawable/editbox_background_normal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:text="Confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_button"
            android:layout_weight="1"
            android:textColor="@color/cardview_light_background"
            android:background="@color/colorPrimary"/>
    </LinearLayout>


</LinearLayout>
