<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/cardview_light_background"
   android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="134dp"
        android:text="Welcome"
        android:textColor="@color/cardview_light_background"
        android:gravity="top|center"
        android:textSize="@dimen/home_welcome_font_size"
        android:fontFamily="sans-serif"
        android:paddingTop="80dp"
        android:background="@drawable/background" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Please choose your account type and enter your information:"
            android:textColor="@color/colorGrey"
            android:fontFamily="sans-serif"
            android:paddingTop="20dp"
            android:textSize="14sp"
            android:paddingBottom="10dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/loginPayRadioGroup">

            <RadioButton
                android:text="Pre-Pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginPrePayRadio"
                android:layout_weight="1" />

            <TextView
                android:text="Meter Number:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginPrePayTextView"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/loginPrePayEditText"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background_normal" />

            <RadioButton
                android:text="Post-Pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginPostPayRadio"
                android:layout_weight="1" />

            <TextView
                android:text="Account Number:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginPostPayTextView"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/loginPostPayEditText"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background_normal" />
        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <Button
                android:text="Submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_submit"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <Button
                android:text="Skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/skip_btn"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
