...
        <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="-3dp"
            android:layout_y="-6dp"
            android:id="@+id/button2" />
            -->
    </WebView>

    <!--
    <Button
        android:text="Button"
...
