...

    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="logout">Logout</string>
    <string name="not_online_dialog">The app is not online! Enable data or connect to Wifi to use all of the features of the App.</string>
    <string name="ok">OK</string>
    <string name="skip_warning">If you skip logging in, many of the features of the App will not work!</string>
    <string name="skip">SKIP</string>
    <string name="go_back">GO BACK</string>
    <string name="login">Login</string>
    <string name="not_logged_in_warning">You are not logged in, so this feature will not work. Do you want to log in?</string>
    <string name="no">No</string>
    <string name="show_SMS_warning">You are not online. If you want, we can send an SMS to do this, but it will charge you standard fees for the SMS.</string>
...
